--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,7 @@
 
 @font-face {
     font-family: 'lemon_milkregular';
-    src: url('./fonts/lemonmilk-regular-webfont.woff2') format('woff2'),
-         url('./fonts/lemonmilk-regular-webfont.woff') format('woff');
+    src: url('./fonts/LEMONMILK-Regular.otf') format('woff2');
     font-weight: normal;
     font-style: normal;
 
@@ -34,6 +33,15 @@
     --green-color: #A3D35F;
     --button-radius: 14px; 
 }
+*{
+    margin:0;
+    padding: 0;
+}
+body{
+    width: 100vw;
+    height: 100vh;
+    font-family: 'ciclesemi';
+}
 
 .headerControl{
     background-color: var(--main-color);
@@ -58,26 +66,95 @@
     display: flex;
     justify-content: space-around;
 }
-.tituloCosControl{
+
+.tittles {
     color:var(--main-color);
-    font-size: 40px;
-        
-}
-h1{
-    font-size: 30px;
-    color:whitesmoke;
     font-family: 'lemon_milkregular';
+    font-size: 20px;
+    margin-bottom: 3px solid var(--main-color);
 }
+
 .logoHeader{
     width: 86px;
     height: 61px;
 }
 
-.logoLogIn{
-    width: 300px;
-    height: auto;
 
+.bodyLogIn{
+    background-color: var(--main-color);
+    width: 100%;
+    height: auto;
 }
+
+.contenedorLogin {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.logoLogin {
+    text-align: center;
+    background-color: var(--main-color);
+    max-width: 500px;
+    margin-top: 100px;
+    
+}
+.imagenLogin {
+    width: 200px;
+    height: auto;
+    justify-content: center;
+    margin: auto;
+}
+.gridLogin {
+    background-color: var(--main-color);
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 500px;
+    margin: auto;
+    justify-content: space-around;
+}
+.filded{
+    background-color: var(--main-color);
+    margin-top: 20px;
+    width: 300px;
+    height: 30px;
+    border-radius: 15px;
+    border: 2px solid white;
+    color: white;
+    font-family: 'ciclesemi';
+    font-size: 16px;
+}
+::placeholder {
+    padding-left: 20px;
+    color: rgb(253, 253, 253);
+    opacity: 1;
+}
+.sendButton {
+    background-color: var(--green-color);
+    padding: 5px;
+    margin-top: 20px;
+    width: 300px;
+    height: 30px;
+    border-radius: 15px;
+    color: var(--main-color);
+    border: 2px solid var(--green-color);
+    display: flex;
+    justify-content: space-around;
+    font-family: 'ciclegordita';
+    font-size: 16px;
+    
+}
+#signIn{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    text-align: center;
+    color: white;
+}
+#signIn > a {
+    text-decoration: none;
+    color: #16c8f2;
+}
+
                        
                        
                        
