--- a/src/Views/medicamentos5.html
+++ b/src/Views/medicamentos5.html
@@ -4,12 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SugarType</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style5.css">
 </head>
 <body>
 <header class="headerControl">
-    <img src="./imagenes/Logo.png" alt="" class="logoHeader">
+    <img src="../imagenes/Logo.png" alt="" class="logoHeader">
 </header>
-    <script type= "module" src="main.js"></script>
+<main>
+    <section class="sectionMedicamentos">
+        <h1 class= "tittles">MEDICAMENTOS</h1>
+    
+        <h3>Actualmente paciente con medicamentos</h3>
+        <form class="mediForm">
+            <label for=""><input type="text" required placeholder="Medicamentos" class="medicamentos">
+                <input type="text" required placeholder="Dosis" class="dosis"></label>
+            <label for=""><input type="text" required placeholder="Medicamentos" class="medicamentos">
+                <input type="text" required placeholder="Dosis" class="dosis"></label>
+            <label for=""><input type="text" required placeholder="Medicamentos" class="medicamentos">
+                <input type="text" required placeholder="Dosis" class="dosis"></label>
+            <label for=""><input type="text" required placeholder="Medicamentos" class="medicamentos">
+                <input type="text" required placeholder="Dosis" class="dosis"></label>
+            <label> <button type= 'submit' class= 'sendButton3'>guardar (LAPIZ)</button>
+        </form>
+    </section>
+    <section>
+        <h3>Desea descargar PDF con historia clínica?</h3>
+        <button type="button" class= 'sendButton3'>PDF</button>
+    </section>
+</main>
+    
+
+
+
+    <script type= "module" src="../main.js"></script>
+
 </body>
 </html>
