--- a/src/Views/glucometrias3.html
+++ b/src/Views/glucometrias3.html
@@ -4,12 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SugarType</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style3.css">
 </head>
 <body>
 <header class="headerControl">
-    <img src="./imagenes/Logo.png" alt="" class="logoHeader">
+    <img src="../imagenes/Logo.png" alt="" class="logoHeader">
 </header>
-    <script type= "module" src="main.js"></script>
+<main>
+    <section>
+        <form action="" id="formGluco">
+            <label for="">Glucometría antes desayuno: <input type="text" required placeholder=""class="inputUp"></label>
+            <label for="" class="labelEat">Desayuno <input type="text" required></label>
+            <label for="">Carbohidratos totales: <input type="text" required class="inputUp"></label>
+            <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp"></label>
+        
+        
+            <label for="">Glucometría antes almuerzo: <input type="text" required placeholder=""class="inputUp"></label>
+            <label for="" class="labelEat">Almuerzo <input type="text" required></label>
+            <label for="">Carbohidratos totales: <input type="text" required class="inputUp"></label>
+            <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp"></label>
+        
+        
+            <label for="">Glucometría antes cena: <input type="text" required placeholder=""class="inputUp"></label>
+            <label for="" class="labelEat">Cena <input type="text" required></label>
+            <label for="">Carbohidratos totales: <input type="text" required class="inputUp"></label>
+            <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp"></label>
+       
+        <button type="button" class= 'sendButton3'>Crear Informe</button>
+    </form>
+
+    </section>
+</main>
+    <script type= "module" src="../main.js"></script>
 </body>
 </html>
