--- a/src/Views/micontrol2.html
+++ b/src/Views/micontrol2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SugarType</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../style2.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style2.css">
 </head>
 <body>
 <header class="headerControl">
@@ -13,10 +13,10 @@
 </header>
 <section class= "contenedorMicontrol">
     <h1 class= "tittles">MI CONTROL</h1>
-    <button type="button" class= 'sendButton2' onclick= "location.href ='glucometrias3.html'">Cómo va mi día</button>
-    <button type="button" class= 'sendButton2' onclick= "location.href ='medicamentos5.html'">Medicamentos</button>
-    <button type="button" class= 'sendButton2' onclick= "location.href ='examenes6.html'">Exámenes de laboratorio</button>
-    <button type="button" class= 'sendButton2' onclick= "location.href ='doctor8.html'">Agenda médica</button>
+    <button type="button" class= "sendButton2" onclick= "location.href ='glucometrias3.html'">Cómo va mi día</button>
+    <button type="button" class= "sendButton2" onclick= "location.href ='medicamentos5.html'">Medicamentos</button>
+    <button type="button" class= "sendButton2" onclick= "location.href ='examenes6.html'">Exámenes de laboratorio</button>
+    <button type="button" class= "sendButton2" onclick= "location.href ='doctor8.html'">Agenda médica</button>
 </section>
     <script type="module" src="../main.js"></script>
 </body>
