--- a/src/Views/glucometrias3.html
+++ b/src/Views/glucometrias3.html
@@ -15,22 +15,22 @@
     <section>
         <form action="" id="formGluco">
             <label for="">Glucometría antes desayuno: <input type="text" required placeholder=""class="inputUp"></label>
-            <label for="" class="labelEat">Desayuno <input type="text" required></label>
+            <label for="" class="labelEat">Desayuno <textarea name="name" rows="8" cols="80" required></textarea></label>
             <label for="">Carbohidratos totales: <input type="text" required class="inputUp"></label>
             <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp"></label>
-        
-        
+
+
             <label for="">Glucometría antes almuerzo: <input type="text" required placeholder=""class="inputUp"></label>
-            <label for="" class="labelEat">Almuerzo <input type="text" required></label>
+            <label for="" class="labelEat">Almuerzo <textarea name="name" rows="8" cols="80" required></textarea></label>
             <label for="">Carbohidratos totales: <input type="text" required class="inputUp"></label>
             <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp"></label>
-        
-        
+
+
             <label for="">Glucometría antes cena: <input type="text" required placeholder=""class="inputUp"></label>
-            <label for="" class="labelEat">Cena <input type="text" required></label>
+            <label for="" class="labelEat">Cena <textarea name="name" rows="8" cols="80" required></textarea></label>
             <label for="">Carbohidratos totales: <input type="text" required class="inputUp"></label>
             <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp"></label>
-       
+
         <button type="button" class= 'sendButton3'>Crear Informe</button>
     </form>
 
