--- a/src/Views/informe4.html
+++ b/src/Views/informe4.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SugarType</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style4.css">
 </head>
 <body>
 <header class="headerControl">
-    <img src="./imagenes/Logo.png" alt="" class="logoHeader">
+  <a  class="back-icon" href="glucometrias3.html"></a>
+  <img src="/imagenes/Logo.png" alt="" class="logoHeader">
 </header>
-    <script type= "module" src="main.js"></script>
+  <main>
+    <h1 class= "tittles">INFORME</h1>
+    <section id="informe">
+      <p>Automáticamnte generamos un informe de los últimos 7 días del cual se muestra un promedio de</p>
+      <ul>
+        <li>Glucosa ates del desayuno <span>###</span></li> <span></span>
+        <li>Carbohidratos en el desayuno <span>###</span></li>
+        <li>Glucosa después del desayuno <span>###</span></li>
+        <li>Glucosa ates del almuezo <span>###</span></li>
+        <li>Carbohidratos en el cenar <span>###</span></li>
+        <li>Glucosa después del cena <span>###</span></li>
+        <li>Glucosa después del cenar <span>###</span></li>
+      </ul>
+    </section>
+    <button type="button" name="button" class="sendButton sendButton2">OK</button>
+  </main>
+
+
+  <script type= "module" src="../main.js"></script>
 </body>
 </html>
