--- a/src/CSS/style2.css
+++ b/src/CSS/style2.css
@@ -1,20 +1,9 @@
-
-.sendButton2 {
-    background-color: var(--secondary-color);
-    padding: 10px;
-    margin-top: 20px;
-    width: 300px;
-    height: 40px;
-    border-radius: 20px;
-    color: white;
-    border: 2px solid var(--secondary-color);
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    font-family: 'ciclegordita';
-    font-size: 16px;
-    font-weight: bold;
-    
+.contenedorMicontrol{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border-bottom: 2px solid var(--secondary-color);
+  padding: 0px 0 40px;
+  margin: 20px;;
 }
-
-
