--- a/src/Views/micontrol2.html
+++ b/src/Views/micontrol2.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SugarType</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../style2.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style2.css">
 </head>
 <body>
-<header class="headerControl">
+  <header class="headerControl">
     <img src="../imagenes/Logo.png" alt="" class="logoHeader">
-</header>
-<section class= "contenedorMicontrol">
+  </header>
+  <main>
     <h1 class= "tittles">MI CONTROL</h1>
-    <button type="button" class= 'sendButton2' onclick= "location.href ='glucometrias3.html'">Cómo va mi día</button>
-    <button type="button" class= 'sendButton2' onclick= "location.href ='medicamentos5.html'">Medicamentos</button>
-    <button type="button" class= 'sendButton2' onclick= "location.href ='examenes6.html'">Exámenes de laboratorio</button>
-    <button type="button" class= 'sendButton2' onclick= "location.href ='doctor8.html'">Agenda médica</button>
-</section>
+    <section class= "contenedorMicontrol">
+      <button type="button" class= "sendButton sendButton2" onclick= "location.href ='glucometrias3.html'">Cómo va mi día</button>
+      <button type="button" class= "sendButton sendButton2" onclick= "location.href ='medicamentos5.html'">Medicamentos</button>
+      <button type="button" class= "sendButton sendButton2" onclick= "location.href ='examenes6.html'">Exámenes de laboratorio</button>
+      <button type="button" class= "sendButton sendButton2" onclick= "location.href ='doctor8.html'">Agenda médica</button>
+    </section>
+  </main>
     <script type="module" src="../main.js"></script>
 </body>
 </html>
