--- a/src/CSS/style4.css
+++ b/src/CSS/style4.css
@@ -20,10 +20,30 @@ ul li{
   margin: 10px;
 }
 
-ul li span{
+span{
   float: right;
 }
 
 button{
   margin: auto;
+}
+
+#hipoDia{
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  padding: 0px 0 40px;
+  border-bottom: 2px solid var(--secondary-color);
+}
+
+.fecha{
+  float: none;
+  margin-left: 15%;
+}
+
+p{
+  padding: 20px;
+}
+p b{
+  color: var(--title-color);
 }
