--- a/src/Views/informe4.html
+++ b/src/Views/informe4.html
@@ -26,6 +26,17 @@
         <li>Glucosa después del cenar <span>###</span></li>
       </ul>
     </section>
+    <section  id="hipoDia">
+      <p><b>Hiperglucemia</b><span class="fecha">24/45/2019</span><span>###</span></p>
+      <p>Alimentos ingeridos</p>
+      <p></p>
+      <p>Carbohidratos<span>###</span></p>
+      <p><b>Hipoglucemia</b><span class="fecha">24/45/2019</span><span>###</span></p>
+      <p>Alimentos ingeridos</p>
+      <p></p>
+      <p>Carbohidratos<span>###</span></p>
+    </section>
+
     <button type="button" name="button" class="sendButton sendButton2">OK</button>
   </main>
 
