--- a/src/Views/glucometrias3.html
+++ b/src/Views/glucometrias3.html
@@ -13,26 +13,20 @@
 </header>
 <main>
     <section>
-        <form action="" id="formGluco">
-            <label for="">Glucometría antes desayuno: <input type="text" required placeholder=""class="inputUp"></label>
-            <label for="" class="labelEat">Desayuno <input type="text" required></label>
-            <label for="">Carbohidratos totales: <input type="text" required class="inputUp"></label>
-            <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp"></label>
+
         
-        
-            <label for="">Glucometría antes almuerzo: <input type="text" required placeholder=""class="inputUp"></label>
-            <label for="" class="labelEat">Almuerzo <input type="text" required></label>
-            <label for="">Carbohidratos totales: <input type="text" required class="inputUp"></label>
-            <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp"></label>
-        
-        
-            <label for="">Glucometría antes cena: <input type="text" required placeholder=""class="inputUp"></label>
-            <label for="" class="labelEat">Cena <input type="text" required></label>
-            <label for="">Carbohidratos totales: <input type="text" required class="inputUp"></label>
-            <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp"></label>
-       
-        <button type="button" class= 'sendButton3'>Crear Informe</button>
-    </form>
+        <form action="" class="formGluco" id = "formGluco">
+            <div id="containerChecbox">
+                <input class="checkboxInput" type="checkbox" value= "Desayuno" name="Desayuno"> Desayuno
+                <input class="checkboxInput" type="checkbox" value= "Almuerzo"name="Almuerzo"> Almuerzo
+                <input class="checkboxInput" type="checkbox" value= "Cena"name="Cena"> Cena
+            </div>
+            <label for="">Glucometría preprandial <input type="text" required placeholder=""class="inputUp" id = "glucoPreprandial"></label>
+            <label for="" class="labelEat"> Alimentos consumidos <input type="text" required id = "foods"></label>
+            <label for="">Carbohidratos totales: <input type="text" required class="inputUp" id = carbohydrates></label>
+            <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp" id = "glucoPostprandial"></label>
+            <button type="submit" class= 'sendButton3'>Enviar</button>
+        </form>
 
     </section>
 </main>
