--- a/src/Views/micontrol2.html
+++ b/src/Views/micontrol2.html
@@ -13,10 +13,10 @@
 </header>
 <section class= "contenedorMicontrol">
     <h1 class= "tittles">MI CONTROL</h1>
-    <button type="button" class= "sendButton2" id ="buttonGlucometrias">Cómo va mi día</button>
-    <button type="button" class= "sendButton2" id= "buttonMedicamentos">Medicamentos</button>
-    <button type="button" class= "sendButton2" id="buttonExamenes">Exámenes de laboratorio</button>
-    <button type="button" class= "sendButton2" id="buttonDoctor">Agenda médica</button>
+    <button type="button" class= "sendButton2" onclick= "location.href= 'glucometrias3.html'">Cómo va mi día</button>
+    <button type="button" class= "sendButton2" onclick= "location.href= 'medicamentos5.html'">Medicamentos</button>
+    <button type="button" class= "sendButton2" onclick= "location.href= 'examenes6.html'"">Exámenes de laboratorio</button>
+    <button type="button" class= "sendButton2" onclick= "location.href= 'doctor8.html'">Agenda médica</button>
 </section>
 <!--<script> 
     function turnPageC() { 
