Vista de medicamentos

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -82,9 +82,8 @@ body{
 .logoHeader{
     width: 86px;
     height: 61px;
-    margin-left: 15%;
+    margin: auto;
 }
-
 
 .bodyLogIn{
     background-color: var(--main-color);
@@ -147,8 +146,6 @@ body{
     border-radius: 25px;
     color: black;
     border: 2px solid var(--green-color);
-    display: flex;
-    justify-content: space-around;
     font-family: 'ciclegordita';
     font-size: 16px;
     font-weight: bold;
@@ -158,17 +155,6 @@ body{
     background-color: var(--secondary-color);
     color: white;
     border: 2px solid var(--secondary-color);
-}
-
-.back-icon {
-  margin: auto 30px;
-  padding: 0px;
-}
-.back-icon::after{
-  left: 20px;
-  float: left;
-  width: 200%;
-  content: url(../imagenes/back.png);
 }
 
 #signIn{
