--- a/src/Views/informe4.html
+++ b/src/Views/informe4.html
@@ -15,7 +15,7 @@
   <main>
     <h1 class= "tittles">INFORME</h1>
     <section id="informe">
-      <p>Automáticamnte generamos un informe de los últimos 7 días del cual se muestra un promedio de</p>
+      <p>Automáticamente generamos un informe de los últimos 7 días del cual se muestra un promedio de</p>
       <ul>
         <li>Glucosa ates del desayuno <span>###</span></li> <span></span>
         <li>Carbohidratos en el desayuno <span>###</span></li>
@@ -36,7 +36,6 @@
       <p></p>
       <p>Carbohidratos<span>###</span></p>
     </section>
-
     <button type="button" name="button" class="sendButton sendButton2">OK</button>
   </main>
 
