--- a/src/Views/medicamentos5.html
+++ b/src/Views/medicamentos5.html
@@ -4,36 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SugarType</title>
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/style5.css">
+    <link rel="stylesheet" href="../cSS/style.css">
+    <link rel="stylesheet" href="../cSS/style5.css">
 </head>
 <body>
-<header class="headerControl">
-    <img src="../imagenes/Logo.png" alt="" class="logoHeader">
-</header>
+  <header class="headerControl">
+    <a  class="back-icon" href="micontrol2.html"></a>
+    <img src="/imagenes/Logo.png" alt="" class="logoHeader">
+  </header>
 <main>
+    <h1 class= "tittles">MEDICAMENTOS</h1>
     <section class="sectionMedicamentos">
-        <h1 class= "tittles">MEDICAMENTOS</h1>
-    
-        <h3>Actualmente paciente con medicamentos</h3>
+        <h3>Medicamentos actuales del paciente</h3>
         <form class="mediForm">
-            <label for=""><input type="text" required placeholder="Medicamentos" class="medicamentos">
+            <label for=""><input type="text" required placeholder="Medicamento" class="medicamentos">
                 <input type="text" required placeholder="Dosis" class="dosis"></label>
-            <label for=""><input type="text" required placeholder="Medicamentos" class="medicamentos">
+            <label for=""><input type="text" required placeholder="Medicamento" class="medicamentos">
                 <input type="text" required placeholder="Dosis" class="dosis"></label>
-            <label for=""><input type="text" required placeholder="Medicamentos" class="medicamentos">
+            <label for=""><input type="text" required placeholder="Medicamento" class="medicamentos">
                 <input type="text" required placeholder="Dosis" class="dosis"></label>
-            <label for=""><input type="text" required placeholder="Medicamentos" class="medicamentos">
+            <label for=""><input type="text" required placeholder="Medicamento" class="medicamentos">
                 <input type="text" required placeholder="Dosis" class="dosis"></label>
-            <label> <button type= 'submit' class= 'sendButton3'>guardar (LAPIZ)</button>
+            <button type= 'submit' class= "sendButton3"><img src="../imagenes/edit.png" alt=""></button>
         </form>
     </section>
-    <section>
-        <h3>Desea descargar PDF con historia clínica?</h3>
-        <button type="button" class= 'sendButton3'>PDF</button>
+    <section class="pdf">
+        <h3>¿Desea descargar PDF con historia clínica?</h3>
+        <button type="button" class= 'sendButton sendButton2'>PDF</button>
     </section>
 </main>
-    
+
 
 
 
