--- a/src/Views/micontrol2.html
+++ b/src/Views/micontrol2.html
@@ -13,11 +13,12 @@
   </header>
   <main>
     <h1 class= "tittles">MI CONTROL</h1>
-    <button type="button" class= "sendButton2" onclick= "location.href ='glucometrias3.html'">Cómo va mi día</button>
-    <button type="button" class= "sendButton2" onclick= "location.href ='medicamentos5.html'">Medicamentos</button>
-    <button type="button" class= "sendButton2" onclick= "location.href ='examenes6.html'">Exámenes de laboratorio</button>
-    <button type="button" class= "sendButton2" onclick= "location.href ='doctor8.html'">Agenda médica</button>
-</section>
+    <section class="contenedorMicontrol">
+    <button type="button" class= "sendButton sendButton2" onclick= "location.href ='glucometrias3.html'">Cómo va mi día</button>
+    <button type="button" class= "sendButton sendButton2" onclick= "location.href ='medicamentos5.html'">Medicamentos</button>
+    <button type="button" class= "sendButton sendButton2" onclick= "location.href ='examenes6.html'">Exámenes de laboratorio</button>
+    <button type="button" class= "sendButton sendButton2" onclick= "location.href ='doctor8.html'">Agenda médica</button>
+  </section>
     <script type="module" src="../main.js"></script>
 </body>
 </html>
