--- a/src/Views/glucometrias3.html
+++ b/src/Views/glucometrias3.html
@@ -14,17 +14,17 @@
 <main>
     <section>
 
-        
         <form action="" class="formGluco" id = "formGluco">
             <div id="containerChecbox">
-                <input class="checkboxInput" type="checkbox" value= "Desayuno" name="Desayuno"> Desayuno
-                <input class="checkboxInput" type="checkbox" value= "Almuerzo"name="Almuerzo"> Almuerzo
-                <input class="checkboxInput" type="checkbox" value= "Cena"name="Cena"> Cena
+                <input class="checkboxInput" type="checkbox" value= "Desayuno" name="comida"> Desayuno
+                <input class="checkboxInput" type="checkbox" value= "Almuerzo"name="comida"> Almuerzo
+                <input class="checkboxInput" type="checkbox" value= "Cena"name="comida"> Cena
             </div>
             <label for="">Glucometría preprandial <input type="text" required placeholder=""class="inputUp" id = "glucoPreprandial"></label>
             <label for="" class="labelEat"> Alimentos consumidos <input type="text" required id = "foods"></label>
             <label for="">Carbohidratos totales: <input type="text" required class="inputUp" id = carbohydrates></label>
             <label for="">Glucometría 2 horas después: <input type="text" required class="inputUp" id = "glucoPostprandial"></label>
+            <input class="checkboxPeriodo" type="checkbox" value= "Sí"name="periodo"> ¿Se encuentra en su periodo?
             <button type="submit" class= 'sendButton3'>Enviar</button>
         </form>
 
