--- a/src/Views/agenda7.html
+++ b/src/Views/agenda7.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SugarType</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style7.css">
 </head>
 <body>
-<header class="headerControl">
-    <img src="./imagenes/Logo.png" alt="" class="logoHeader">
-</header>
+  <header class="headerControl">
+    <a  class="back-icon" href="glucometrias3.html"></a>
+    <img src="/imagenes/Logo.png" alt="" class="logoHeader">
+  </header>
+  <h1 class= "tittles">AGENDA</h1>
+  <section id="doctores">
+    <ul>
+      <li><img src="/imagenes/avatar.png" alt=""> <p>Doc. Evelio Rodriguez <br><span>Diabetología</span></p></li>
+      <li><img src="/imagenes/avatar.png" alt=""> <p>Doc. Rodrigo Rey <br><span>Nutrición</span></p></li>
+      <li><img src="/imagenes/avatar.png" alt=""> <p>Doc. Oriana Reina <br><span>Podlogía</span></p></li>
+      <li><img src="/imagenes/avatar.png" alt=""> <p>Doc. Lina Camargo <br><span>Oftalmología</span></p></li>
+    </ul>
+    <button type="button" name="button" class="sendButton sendButton2">Revisar mi agenda</button>
+  </section>
     <script type= "module" src="main.js"></script>
 </body>
 </html>
