--- a/src/Views/examenes6.html
+++ b/src/Views/examenes6.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SugarType</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style6.css">
 </head>
 <body>
-<header class="headerControl">
-    <img src="./imagenes/Logo.png" alt="" class="logoHeader">
-</header>
-    <script type= "module" src="main.js"></script>
+  <header class="headerControl">
+    <a  class="back-icon" href="glucometrias3.html"></a>
+    <img src="/imagenes/Logo.png" alt="" class="logoHeader">
+  </header>
+  <h1 class= "tittles">EXAMENES</h1>
+  <section id="examenes">
+    <h3>Examentes registrados:</h3>
+    <ul>
+      <li>22/03/2020 <a>Revisar</a></li>
+      <li>22/06/2020 <a>Revisar</a></li>
+      <li>22/09/2020 <a>Revisar</a></li>
+      <li>22/12/2020 <a>Revisar</a></li>
+    </ul>
+  </section>
+
+    <script type= "module" src="../main.js"></script>
 </body>
 </html>
