--- a/src/Views/informe4.html
+++ b/src/Views/informe4.html
@@ -17,10 +17,10 @@
     <section id="informe">
       <p>Automáticamente generamos un informe de los últimos 7 días del cual se muestra un promedio de</p>
       <ul>
-        <li>Glucosa ates del desayuno <span>###</span></li> <span></span>
+        <li>Glucosa antes del desayuno <span>###</span></li>
         <li>Carbohidratos en el desayuno <span>###</span></li>
         <li>Glucosa después del desayuno <span>###</span></li>
-        <li>Glucosa ates del almuezo <span>###</span></li>
+        <li>Glucosa antes del almuezo <span>###</span></li>
         <li>Carbohidratos en el cenar <span>###</span></li>
         <li>Glucosa después del cena <span>###</span></li>
         <li>Glucosa después del cenar <span>###</span></li>
