--- a/src/Views/glucometrias3.html
+++ b/src/Views/glucometrias3.html
@@ -31,5 +31,7 @@
     </section>
 </main>
     <script type= "module" src="../main.js"></script>
+    <script type= "module" src="../firebaseconfig.js"></script>
+    
 </body>
 </html>
