--- a/src/Views/agenda7.html
+++ b/src/Views/agenda7.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SugarType</title>
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/style7.css">
+    <link rel="stylesheet" href="../estilos/style7.css">
+    <link rel="stylesheet" href="../estilos/style.css">
 </head>
 <body>
   <header class="headerControl">
