--- a/src/Views/medicamentos5.html
+++ b/src/Views/medicamentos5.html
@@ -10,7 +10,7 @@
 <body>
   <header class="headerControl">
     <a  class="back-icon" href="micontrol2.html"></a>
-    <img src="/imagenes/Logo.png" alt="" class="logoHeader">
+    <img src="../imagenes/Logo.png" alt="" class="logoHeader">
   </header>
 <main>
     <h1 class= "tittles">MEDICAMENTOS</h1>
@@ -29,7 +29,7 @@
         </form>
     </section>
     <section class="pdf">
-        <h3>¿Desea descargar PDF con historia clínica?</h3>
+        <h3>¿Desea descargar PDF con record de medicamentos?</h3>
         <button type="button" class= 'sendButton sendButton2'>PDF</button>
     </section>
 </main>
