--- a/src/Views/micontrol2.html
+++ b/src/Views/micontrol2.html
@@ -17,7 +17,7 @@
     <button type="button" class= "sendButton sendButton2" onclick= "location.href ='glucometrias3.html'">Cómo va mi día</button>
     <button type="button" class= "sendButton sendButton2" onclick= "location.href ='medicamentos5.html'">Medicamentos</button>
     <button type="button" class= "sendButton sendButton2" onclick= "location.href ='examenes6.html'">Exámenes de laboratorio</button>
-    <button type="button" class= "sendButton sendButton2" onclick= "location.href ='doctor8.html'">Agenda médica</button>
+    <button type="button" class= "sendButton sendButton2" onclick= "location.href ='agenda7.html'">Agenda médica</button>
   </section>
     <script type="module" src="../main.js"></script>
 </body>
