--- a/src/Views/examenes6.html
+++ b/src/Views/examenes6.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header class="headerControl">
-    <a  class="back-icon" href="glucometrias3.html"></a>
-    <img src="/imagenes/Logo.png" alt="" class="logoHeader">
+    <a  class="back-icon" href="micontrol2.html"></a>
+    <img src="../imagenes/Logo.png" alt="" class="logoHeader">
   </header>
   <h1 class= "tittles">EXAMENES</h1>
   <section id="examenes">
